Finishing up redux content

--- a/redux/counter/index.html
+++ b/redux/counter/index.html
@@ -10,7 +10,7 @@
 		<div class="root"></div>
 	</body>
 	<script>
-		System.import("app/index").then(function() {
+		System.import("index").then(function() {
 			console.log("App Loaded");
 		}, function(e) {
 			console.log("Error: ", e);
