--- a/redux/counter/index.html
+++ b/redux/counter/index.html
@@ -5,6 +5,8 @@
 		<title>React Redux Example</title>
 		<script type="text/javascript" src="jspm_packages/system.js"></script>
 		<script type="text/javascript" src="config.js"></script>
+		<link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div class="root"></div>
