--- a/redux/todo/index.html
+++ b/redux/todo/index.html
@@ -5,12 +5,14 @@
 		<title>React Redux Example</title>
 		<script type="text/javascript" src="jspm_packages/system.js"></script>
 		<script type="text/javascript" src="config.js"></script>
+		<link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div class="root"></div>
 	</body>
 	<script>
-		System.import("app/index").then(function() {
+		System.import("index").then(function() {
 			console.log("App Loaded");
 		}, function(e) {
 			console.log("Error: ", e);
