--- a/redux/todo/index.html
+++ b/redux/todo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>React Redux Example</title>
+		<title>React/Redux Starter Kit</title>
 		<script type="text/javascript" src="jspm_packages/system.js"></script>
 		<script type="text/javascript" src="config.js"></script>
 		<link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
