--- a/react/helloWorld/index.html
+++ b/react/helloWorld/index.html
@@ -4,10 +4,9 @@
 		<meta charset="utf-8">
 		<title>React Starter Kit</title>
 		<link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
-		<div class="container"></div>
+		<div class="app"></div>
 	</body>
 	<script src="./dist/bundle.js"></script>
 </html>
